@@ -31,7 +31,6 @@ import static org.openqa.selenium.testing.Safely.safelyCall;
 import com.google.common.net.HostAndPort;
 import java.io.IOException;
 import java.io.UncheckedIOException;
-import java.io.UnsupportedEncodingException;
 import java.net.URI;
 import java.net.URLEncoder;
 import java.nio.file.Files;
@@ -169,11 +168,7 @@ class ReferrerTest {
   }
 
   private static String encode(String url) {
-    try {
-      return URLEncoder.encode(url, UTF_8.name());
-    } catch (UnsupportedEncodingException e) {
-      throw new RuntimeException("UTF-8 should always be supported!", e);
-    }
+    return URLEncoder.encode(url, UTF_8);
   }
 
   private void performNavigation(WebDriver driver, String firstUrl) {
